--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
   </head>
   <body>
     <div class="super">
-      <div class="outer">
-        <div class="inner">
-            
-        </div>
-    </div>
+      <div class="outer"></div>
+      <div class="inner"></div>
     </div>
   </body>
 </html>
